--- a/playground/src/ui/astGraph/astGraph.css
+++ b/playground/src/ui/astGraph/astGraph.css
@@ -1,30 +1,21 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Page Title</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-  <style>
-  #cy {
+.astGraphCanvasContainer {
   width: 100vw;
   height: 100vh;
   display: block;
 }
-#controls {
+
+.astGraphControlsContainer {
 position: absolute;
     top: 10px;
 }
-#minimap {
+
+.astGraphMinimapContainer {
 position: absolute;
     top: 10px;
     right: 50px;
     width: 200px;
     height: 200px;
 }
-
 .cytoscape-navigator{
 	position: fixed;
 	border: 1px solid #000;
@@ -69,10 +60,3 @@ position: absolute;
 	left: 0;
 	z-index: 103;
 }
-</style>
-<div id="cy"></div>
-<div id="controls"></div>
-<div id="minimap"></div>
-    <script src="test.tsx"></script>
-</body>
-</html> -->
