--- a/playground/src/ui/astGraph/astGraph.css
+++ b/playground/src/ui/astGraph/astGraph.css
@@ -1,18 +1,21 @@
 .astGraphCanvasContainer {
-  width: 100vw;
-  height: 100vh;
+  width: 60vw;
+  height: 60vh;
   display: block;
+  /* left: 0px; top: 0px; */
 }
 
 .astGraphControlsContainer {
-position: absolute;
-    top: 10px;
+  position: absolute;
+  top: 10px;
+    /* left: 0px; top: 0px; */
 }
 
 .astGraphMinimapContainer {
 position: absolute;
     top: 10px;
-    right: 50px;
+    right:60px;
+    /* left: 0px; top: 0px; */
     width: 200px;
     height: 200px;
 }
@@ -23,21 +26,26 @@ position: absolute;
 	z-index: 99999;
 	width: 400px;
 	height: 400px;
+  max-height: 40vh;
+  max-width: 40vw;
 	bottom: 0;
 	right: 0;
-	overflow: hidden;
+  overflow: hidden; 
 }
 
 .cytoscape-navigator > img{
 	max-width: 100%;
-	max-height: 100%;
+  max-height: 100%;
+  
+  /* max-height: 30vh;
+  max-width: 40vw; */
 }
 
 .cytoscape-navigator > canvas{
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 101;
+  z-index: 101;
 }
 
 .cytoscape-navigatorView{
@@ -45,16 +53,17 @@ position: absolute;
 	top: 0;
 	left: 0;
 	cursor: move;
-	background: #B7E1ED;
+	background: rgb(170, 194, 201);
 	-moz-opacity: 0.50;
 	opacity: 0.50;
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=50);
 	z-index: 102;
 }
-
-.cytoscape-navigatorOverlay{
+ 
+ .cytoscape-navigatorOverlay{
 	position: absolute;
 	top: 0;
+  /* left: 0px; top: 0px; */
 	right: 0;
 	bottom: 0;
 	left: 0;
