--- a/svg-png-converter/playground/src/ui/styles.css
+++ b/svg-png-converter/playground/src/ui/styles.css
@@ -1,22 +1,4 @@
-.logsList {
-  max-width: 70vw; 
-  overflow: scroll;
-  display: block;
-}
 
-input[type="checkbox"]{
-  cursor: pointer;    
-  line-height: 22px;  
-  font-size: 22px;
-  border-radius: 5px;
-  transition: color 0.2s ease;
-  background-color: #CCE2FF;
-  color: rgba(0, 0, 0, 0.87);
-  z-index: 3;
-  zoom: 1.2;
-  width: 22px;
-  height: 22px;
-}
 .appBody .ui.grid > .column:not(.row) {
   padding: 0!important;
   margin: 0!important;
@@ -24,4 +6,46 @@ input[type="checkbox"]{
 textarea {
   width: 100%;
   height: 200px;
+}
+.field-description {
+  display: none;
+  background:#745261!important; 
+  position: absolute;
+  top: -2em;  
+}
+:hover>.field-description, :focus>.field-description {
+  display: block;
+} 
+.form-group, .form-control {
+  display: inline;
+  /* border: 1px dotted #ededed; */
+  border-radius: 1em;
+  padding: 0.4em;
+  margin-bottom: 1em;
+  /* width: 100%; */
+}
+#root >  .form-group .form-group>* {
+ display: inline;
+} 
+[type="color"]{
+  padding: 0;
+}
+input, select,  {
+  /* border: 2px solid pink; */
+  border-radius:0.5em;
+  display: inline;
+
+}
+/* .field-object {
+}
+*/
+/* .field-string {
+  white-space: nowrap;
+}  */
+.control-label, .checkbox label {
+  font-weight: bolder;
+  /* display: block; */
+  font-size: 1.1em;
+  margin-right: 0.8em;
+  text-transform: capitalize;
 }
