--- a/playground/src/ui/astGraph/astGraph.css
+++ b/playground/src/ui/astGraph/astGraph.css
@@ -1,25 +1,32 @@
 .astGraphCanvasContainer {
-  width: 60vw;
-  height: 60vh;
+  width: 100vw;
+  height: 40vh;
   display: block;
+  position: absolute
   /* left: 0px; top: 0px; */
 }
 
-.astGraphControlsContainer {
+.ui.astGraphControlsContainer {
+  z-index: 99;
   position: absolute;
-  top: 10px;
+  /* top: 10px; */
+  /* bottom: 0; */
+  right: 0%;
+  top: 100%;
+  left: 70%;
+  display: block;
     /* left: 0px; top: 0px; */
 }
 
-.astGraphMinimapContainer {
+/* .astGraphMinimapContainer {
 position: absolute;
     top: 10px;
     right:60px;
     /* left: 0px; top: 0px; */
-    width: 200px;
-    height: 200px;
-}
-.cytoscape-navigator{
+    /* width: 200px;
+    height: 200px; 
+  }
+/* .cytoscape-navigator{
 	position: fixed;
 	border: 1px solid #000;
 	background: #fff;
@@ -31,14 +38,12 @@ position: absolute;
 	bottom: 0;
 	right: 0;
   overflow: hidden; 
-}
+} */
 
-.cytoscape-navigator > img{
+/* .cytoscape-navigator > img{
 	max-width: 100%;
   max-height: 100%;
-  
-  /* max-height: 30vh;
-  max-width: 40vw; */
+   
 }
 
 .cytoscape-navigator > canvas{
@@ -63,9 +68,10 @@ position: absolute;
  .cytoscape-navigatorOverlay{
 	position: absolute;
 	top: 0;
-  /* left: 0px; top: 0px; */
+   left: 0px; top: 0px; 
 	right: 0;
 	bottom: 0;
 	left: 0;
 	z-index: 103;
-}
+} 
+ç*/
