--- a/bitmap2vector-online-converter/src/ui/styles.css
+++ b/bitmap2vector-online-converter/src/ui/styles.css
@@ -1,7 +1,7 @@
 .drop-file {
-  width: 4em;
-  height: 3em;
-  background-color: 'green'; 
+  width: 100%;
+  height: 6em;
+  background-color: green; 
   border: 2px solid pink;
 }
 
@@ -28,4 +28,13 @@ nav, nav .nav-wrapper i, nav a.sidenav-trigger, nav a.sidenav-trigger i {
 
 .header .brand-logo {
   max-height: 1em;
+}
+.file-field input.file-path, .file-field input[type=file]  {
+  background-color: transparent;
+  border: 1px solid gray;
+  border-bottom: 1px solid #9e9e9e;
+  border-radius: 0;
+  outline: none;
+  height: 3rem;
+  width: 90%;
 }
